alignwide fixes front and back end
Closes https://github.com/maithemewp/mai-engine/issues/561

--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -9,6 +9,10 @@
  * max-width + 160 (admin menu width) + 280 (block editor sidebar width) + 60px (extra).
  */
 
+.edit-post-layout {
+	--editor-viewport-width: calc(100vw - var(--admin-menu-width, 160px) - var(--block-sidebar-width, 0px)); // Requires 0px for calc(). This is used in editor.scss too.
+}
+
 .folded {
 	--admin-menu-width: 36px;
 }
@@ -30,12 +34,22 @@
 }
 
 .wp-block[data-align="full"] {
-	max-width: var(--alignfull-max-width, var(--viewport-width));
-	margin-right: var(--alignfull-margin-right, calc(50% - ((var(--viewport-width) / 2) - (var(--scrollbar-width, 0px) / 2)))) !important;
-	margin-left: var(--alignfull-margin-left, calc(50% - ((var(--viewport-width) / 2) - (var(--scrollbar-width, 0px) / 2)))) !important;
+	max-width: var(--alignfull-max-width, var(--editor-viewport-width));
+	margin-right: var(--alignfull-margin-right, calc(50% - ((var(--editor-viewport-width) / 2) - (var(--scrollbar-width, 0px) / 2)))) !important;
+	margin-left: var(--alignfull-margin-left, calc(50% - ((var(--editor-viewport-width) / 2) - (var(--scrollbar-width, 0px) / 2)))) !important;
+}
+
+.wp-block[data-align="wide"] {
+	--alignwide-max-side-spacing: max(0px, calc((var(--editor-viewport-width) - var(--wp-block-max-width)) / 4));
+	--alignwide-side-spacing: min(var(--spacing-xxxxl), var(--alignwide-max-side-spacing));
+	width: calc(100% * (var(--alignwide-side-spacing) * 2));
+	max-width: unset;
+	margin-right: calc(var(--alignwide-side-spacing) * -1);
+	margin-left: calc(var(--alignwide-side-spacing) * -1);
 }
 
 // Wide Content (Default).
+
 
 @media only screen and (min-width: 1220px) {
 
@@ -59,16 +73,7 @@
 	}
 }
 
-@media only screen and (min-width: 1020px) {
-
-	.content-sidebar .edit-post-layout.is-sidebar-opened,
-	.content-sidebar .edit-post-layout:not(.is-sidebar-opened),
-	.sidebar-content .edit-post-layout.is-sidebar-opened,
-	.sidebar-content .edit-post-layout:not(.is-sidebar-opened),
-	.standard-content .edit-post-layout:not(.is-sidebar-opened) {
-		--wp-block-max-width: var(--breakpoint-md);
-	}
-}
+// Standard.
 
 @media only screen and (min-width: 1300px) {
 
@@ -90,6 +95,19 @@
 
 	.narrow-content .edit-post-layout.is-sidebar-opened {
 		--wp-block-max-width: var(--breakpoint-sm);
+	}
+}
+
+// Sidebar.
+
+@media only screen and (min-width: 1020px) {
+
+	.content-sidebar .edit-post-layout.is-sidebar-opened,
+	.content-sidebar .edit-post-layout:not(.is-sidebar-opened),
+	.sidebar-content .edit-post-layout.is-sidebar-opened,
+	.sidebar-content .edit-post-layout:not(.is-sidebar-opened),
+	.standard-content .edit-post-layout:not(.is-sidebar-opened) {
+		--wp-block-max-width: var(--breakpoint-md);
 	}
 }
 
